# scoundrel-rl

./: .gitignore  README.md  pyproject.toml  scoundrel_sim.py  setup_env.sh
analysis/: __init__.py  plot_run.py
scoundrel/: __init__.py  card.py  deck_stats_callback.py  engine.py  env.py  replay_best_gui.py  train.py  win_rate_callback.py
tests/: conftest.py  test_engine_core.py  test_env_render.py  test_env_reward.py  test_full_games.py  test_resolve_card.py
viewer/: __init__.py  __main__.py  main.py
